--- a/package.json
+++ b/package.json
@@ -261,6 +261,7 @@
     "graphql-persisted-document-loader": "2.0.0",
     "graphql-tag": "2.11.0",
     "hammerjs": "2.0.8",
+    "hard-source-webpack-plugin": "0.13.1",
     "html-webpack-plugin": "4.5.0",
     "html-webpack-pug-plugin": "2.0.0",
     "i18next-chained-backend": "2.0.1",
